# minesweep-automated

./: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
.github/workflows/: build.yml
automation-worker/: Cargo.toml
automation-worker/src/: lib.rs  main.rs
minesweep-core/: Cargo.toml
minesweep-core/src/: lib.rs  solve.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tinysat/: Cargo.toml
tinysat/src/: lib.rs  solver.rs
