[package]
name = "minesweep-automated"
version = "0.1.0"
edition = "2021"

[dependencies]
minesweep-core = { path = "./minesweep-core" }
tinysat = { path = "./tinysat" }
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
stylers = "0.3.2"

[workspace]
members = ["minesweep-core", "tinysat"]
