[package]
name = "minesweep-automated"
version = "0.1.0"
edition = "2024"

[dependencies]
automation-worker = {path = "./automation-worker" }
minesweep-core = { path = "./minesweep-core" }
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
stylers = "0.3"
leptos-use = "0.13"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "CssStyleDeclaration", "Document", "Element", "HtmlCanvasElement", "Performance", "Window"] }
gloo-worker = { version = "0.5.0", features = ["futures"] }
futures = "0.3.31"

[patch.crates-io]
leptos_macro = { git = "https://github.com/NKID00/leptos.git", branch = "leptos_0.6" }

[workspace]
members = ["automation-worker", "minesweep-core", "tinysat"]
