[package]
name = "automation-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
minesweep-core = { path = "../minesweep-core" }
gloo-worker = { version = "0.5", features = ["futures"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Performance", "WorkerGlobalScope"] }
futures = "0.3.31"

